<resources>
    <string name="app_name">MyNotes</string>
    <string name="labelApp">MyNotes SugarSeries</string>
    <string name="saveButton">Save Notes</string>
    <string name="title">Title</string>
    <string name="isi">What do you want to type?</string>
    <string name="desc">Aplikasi ini dibuat menggunakan Android Studio untuk kebutuhan belajar membuat applikasi Android.
    Aplikasi ini menggunakan Realm untuk menyimpan data.</string>
    <string name="androidVersi">Android Studio Bumblebee | 2021.1.1 Patch 2
    Build #AI-211.7628.21.2111.8193401, built on February 17, 2022
    Runtime version: 11.0.11+9-b60-7590822 amd64
    VM: OpenJDK 64-Bit Server VM by Oracle Corporation
    Windows 10 10.0
    GC: G1 Young Generation, G1 Old Generation
    Memory: 1280M
    Cores: 12
    Registry: external.system.auto.import.disabled=true
    Non-Bundled Plugins: org.jetbrains.kotlin (211-1.6.10-release-923-AS7442.40)</string>
    <string name="addNote">Add Notes</string>
    <string name="labelAddNote">Add New Notes</string>
    <string name="tambahCatatan">Add Notes</string>
    <string name="ListCatatan">List Notes</string>
    <string name="setting">Setting</string>
    <string name="aboutTitle">About MyNotes</string>
    <string name="about">About</string>
    <string name="titleView">Title</string>
    <string name="deskripsi">What do you want to type ?</string>
    <string name="time">6 Apr 2022 16.25.23</string>

</resources>