<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradien_color"
    android:orientation="vertical"
    tools:context=".AddNoteActivity">

    <TextView
        android:id="@+id/titletextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/aboutTitle"
        android:textColor="#3c6e71"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/cardview_light_background"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/about"
            android:padding="10dp"
            android:textColor="#393939"
            android:textColorHint="#858484"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#858484" />

        <TextView
            android:id="@+id/aboutMynotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="top"
            android:text="@string/desc"
            android:lines="10"
            android:padding="10dp"
            android:textColor="#393939"
            android:textColorHint="#858484" />
    </LinearLayout>
</LinearLayout>