<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titletextview"
        android:text="Add new note"
        android:textColor="#141E61"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/titleinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#DDDDDD"
            android:hint="@string/title"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/descriptioninput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#DDDDDD"
            android:gravity="top"
            android:hint="@string/desc"
            android:lines="10"
            android:padding="10dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#141E61"
        android:text="@string/saveButton"
        android:textColor="#FFFFFF" />

</LinearLayout>